<resources>
    <string name="app_name">Demo Example</string>
    <string name="button_settings">Start demo</string>
    <string name="button_checkout">Continue to payment details</string>
    <string name="button_pay">Pay</string>
    <string name="button_neworder">Start new order</string>
    <string name="button_edit">Edit</string>

    <string name="settings_header">Demo Settings</string>
    <string name="settings_hint">List URL</string>

...
