<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_chargepayment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/layout_progress_view" />

</RelativeLayout>
