<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_buttons"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="end">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialogbutton_neutral"
        style="?attr/borderlessButtonStyle"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialogbutton_positive"
        style="?attr/borderlessButtonStyle"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
